# chip8-emulator

./: CMakeLists.txt  Makefile  README.md  c8_main.c  ceemu  ceemu_main.c  chip8.cpp  chip8.h  cpulib.c  cpulib.h  main.cpp
cmake/: cmake_install.cmake
src/: chip8.cpp  chip8.h  main.cpp
